# module-assembler

./: .gitignore  .gitlab-ci.yml  404.html  README.md  build.gradle  cli.py  gradle.properties  index.html  main.py  mkdocs.yml  module_config.json  pack_pyadb.bash  pyproject.toml  requirements.txt  settings.gradle  setup.py
.github/workflows/: android-build.yml  android.yml  gen_web.yml  genweb.yml  intellij-plugin-build.yml  intellij_plugin.yml  kmp-build-android.yml  kmp-build-ios.yml  kmp-build.yml  kmp-template-cleanup.yml  macli-build.yml  plugin-build.yml  publish.yml  server.yml
.husky/: pre-commit
android/: .gitignore  .gitlab-ci-android.yml  README.md  build.gradle  build.gradle.kts  gradle.properties  module_config.json  settings.gradle  settings.gradle.kts
android/app/: build.gradle
android/base/: build.gradle
android/dynamicfeature/: build.gradle.kts
android/dynamicfeature2/: build.gradle.kts
android/gradle/: libs.versions.toml
b/: .gitlab-ci-android.yml  build.gradle  gradle.properties  module_config.json  settings.gradle
blog/: index.html
cli/: .gitignore  README.md  __init__.py  init.py  main.py  pack.bash  pyproject.toml  requirements.txt  setup.py
cli/cmds/: __init__.py  bundle.py  config.py  create.py  init.py  picker.py
cli/cmds/ext/: property.py
cli/src/cmds/: __init__.py  bundle.py  config.py  create.py  init.py  picker.py  strong_build.py  util.py
cli/src/cmds/ext/: util.py
cli/src/cmds/picker/: Policy.py  __init__.py  property.py
cli/src/picker/: __init__.py
cli/tests/: test_cmds.py  test_simple.py
composite-builds/: .gitignore  README.md  aar.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
dashboard/: package-lock.json  package.json
docs/: blog.md  getstarted.md  index.md
getstarted/: index.html
gradle-plugin/: README.md  gradle.properties  settings.gradle.kts
jenkins/: README.md
kmp/: build.gradle.kts  gradle.properties  module_config.json  settings.gradle.kts
module-assembler-gradle-plugin/: README.md  build.gradle  gradle.properties  settings.gradle.kts
module-assembler-gradle-plugin-kt/: build.gradle.1  build.gradle.kts  gradle.properties  settings.gradle.kts
module-assembler-intellij-plugin/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
module-manager-intellij-plugin/: CHANGELOG.md  README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
module-publisher-gradle-plugin/: README.md  build.gradle  gradle.properties  settings.gradle.kts
script/: app_module.gradle  bundle_module.gradle  foundation_module.gradle  module_publisher.gradle
search/: search_index.json
server/: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  gunicorn.conf.py  main.py  requirements.txt  setup.py
template/: README.md  build.gradle  gradle.properties  local.properties  module_config.json  settings.gradle
(+870 files in other folders)
