[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[tool.poetry]
name = "module-assembler"
version = "1.0.0"
description = "module-assembler"
authors = ["electrolyteJ <electrolytej@gmail.com>"]
license = "Apache2"
readme = "README.md"
packages = [{ include = "ma", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.2"
black = "^23.3.0"
mkdocs = "1.4.2"
mkdocs-material = "^9.1.5"
mkdocs-material-extensions = "1.1.1"
mkdocs-static-i18n = "0.53"
mkdocs-rss-plugin = "1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
warn_return_any = true

[tool.poetry.scripts]
android = 'ma:android'
macli = 'ma:cli'